# postgresql-notification-listener

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
postgresql_notification_listener/: listener.py  types.py
scripts/: release.py
src/postgresql_notification_listener/: __init__.py  listener.py  types.py
tests/: test_listener.py
