[project]
name = "postgresql-notification-listener"
version = "3.1.0"
description = "Execute functions on PostgreSQL notifications"
authors = [
    {name = "Tero Vuotila", email = "tero.vuotila@falcony.io"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "psycopg<4",
]

[project.urls]
repository = "https://github.com/tvuotila/postgresql-notification-listener"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "black",
    "pytest",
    "pytest-timeout",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
files = "."
exclude = ["dist"]
warn_unused_ignores = true
show_error_codes = true
strict = true


[tool.pytest.ini_options]
filterwarnings = ["error"]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "info"
testpaths = [
  "tests",
]
