[project]
name = "postgresql-notification-listener"
version = "3.2.3"
description = "Execute functions on PostgreSQL notifications"
authors = [
    {name = "Tero Vuotila", email = "tero.vuotila@falcony.io"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "psycopg<4",
]

[project.urls]
repository = "https://github.com/tvuotila/postgresql-notification-listener"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "black",
    "pytest",
    "pytest-timeout",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"


[tool.mypy]
files = "."
exclude = ["dist"]
warn_unused_ignores = true
show_error_codes = true
strict = true


[tool.pytest]
filterwarnings = ["error"]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
strict_xfail = true
log_cli_level = "INFO"
testpaths = ["tests"]
